manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: basic-app-1
  name: basic-app-1
