manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic-app-1
  name: basic-app-1
  namespace: basic-app-1
spec:
  ports:
  - port: 1338
    targetPort: 1338
  selector:
    app: basic-app-1
  type: LoadBalancer
