manifests/all-in-one.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: basic-app-1
  name: basic-app-1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: basic-app-1
  name: basic-app-1
  namespace: basic-app-1
spec:
  ports:
  - port: 1338
    targetPort: 1338
  selector:
    app: basic-app-1
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: basic-app-1
  name: basic-app-1
  namespace: basic-app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-app-1
  template:
    metadata:
      labels:
        app: basic-app-1
    spec:
      containers:
      - image: bahajian/basic-app:v0.0.1
        name: basic-app-1
        ports:
        - containerPort: 1338
          name: http
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-app-1
  namespace: basic-app-1
status:
  loadBalancer:
    ingress:
      - hostname: localhost
spec:
  ingressClassName: nginx
  rules:
    - host: app1.ibstorm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basic-app-1
                port:
                  number: 1338
